syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "io.zelbess.tripupdates";
option java_outer_classname = "TripServiceProto";
option objc_class_prefix = "HLW";

package trips;

service TripService {

  rpc createTrip (CreateTripRequest) returns (CreateTripReply) {}
  rpc followTrip (FollowTripRequest) returns (stream FollowTripReply) {}
  rpc updateLocation(stream UpdateLocationRequest) returns (stream UpdateLocationReply) {}
}

message CreateTripRequest {
  int32 driverId = 1;
  int32 invitedPassengerId = 2;
}
message CreateTripReply {
  int32 id = 1;
}

message FollowTripRequest {
  int32 id = 1;
}
message FollowTripReply {
  TripNetworkModel trip = 1;
}
message TripNetworkModel {
  int32 id = 1;
  int32 eta = 2;
  string type = 3;
}

message UpdateLocationRequest {
  int32 user_id = 1; // this is identifier as the phone knows it
  float latitude = 2; // this should be precise float of the latitude
  float longitude = 3; // this should be a precise float of the longitude
  google.protobuf.Timestamp time = 4; // client time when the location as ascertained

}
message UpdateLocationReply {
  int32 statusCode = 1;
}